--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,10 @@
             "@services/*": ["src/app/services/*"],
             "@components/*": ["src/app/components/*"],
             "@models/*": ["src/app/models/*"],
-            "@guards/*": ["src/app/guards/*"]
-        }
+            "@guards/*": ["src/app/guards/*"],
+            "@validators/*": ["src/app/validators/*"]
+        },
+		"skipLibCheck": true
     },
     "angularCompilerOptions": {
         "enableI18nLegacyMessageIdFormat": false,
