--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.scss", "node_modules/animate.css/animate.min.css"],
             "stylePreprocessorOptions": {
               "includePaths": ["src/styles"]
             },
